--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-background-color: #6fa40e;
+background-color: #c4dc23d8;
 }
 div{
     font-size: xx-large;
@@ -13,19 +13,23 @@ div{
     width:100px
     
 }
+
 td{
     width:40px;
     height: 40px;
     border: solid green 2px;
 }
 table{
+    position: absolute;
+
+    z-index: -1;
     border:solid brown 4px;
 }
 small{
     font-size: 13px;
 }
 button{
-    position:absolute;
+    position:relative;
     right:300px;
     width: 140px;
     height: 75px;
@@ -33,4 +37,9 @@ button{
     box-shadow: #8fd212;
     font-size: xx-large;
 
+}
+canvas{
+    position:absolute;
+    z-index: -1 ;
+    border: solid black 1px;
 }
